--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,3 +94,27 @@ footer {
   align-items: center;
   padding: 0 20px;
 }
+
+.emoji {
+  width: 30px;
+}
+
+.slider-row {
+  display: flex;
+}
+
+.food-icon {
+  width: 30px;
+  margin: 0 5px;
+  padding-right: 20px;
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  width: 30px;
+}
+
+.slider-box {
+  display: inline-flex;
+}
