--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,7 @@ button {
 
 .purple-button {
   background-color: #746beb;
+  color: #F1F1EF;
   padding: 20px;
   border: 3px solid black;
   font-size: large;
@@ -29,6 +30,7 @@ button {
 
 .container {
   width: 60%;
+  height: 80%;
   justify-content: center;
   border: 3px solid #000000;
   margin: 20px 10px;
@@ -80,6 +82,10 @@ h3 {
   width: 50vw
 }
 
+.button-group {
+  width: 50vw;
+}
+
 .row-container {
   overflow: hidden;
   height: 100vh;
@@ -104,7 +110,11 @@ h3 {
   }
 
   .food-questions {
-    width: 80vw
+    width: 80vw;
+  }
+
+  .button-group {
+    width: 80vw;
   }
 }
 
@@ -183,12 +193,20 @@ h3 {
 .slider-row {
   display: flex;
   align-items: center;
+  height: 80px;
 }
 
 .food-icon {
-  width: 30px;
+  width: 60px;
   margin: 0 5px;
   padding-right: 20px;
+}
+
+.food-count {
+  font-size: 60px;
+  font-weight: 400;
+  margin: 0 5px;
+  padding-left: 20px;
 }
 
 .icons {
@@ -199,4 +217,17 @@ h3 {
 
 .slider-box {
   display: inline-flex;
+}
+
+.page-message {
+  text-align: center;
+  margin-top: 0px;
+  font-size: 2.5vh;
+}
+
+footer {
+  text-align: center;
+  position: fixed; 
+  bottom:0%;
+  margin-bottom: 30px;
 }
