continue consistent with figma

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,8 @@ button {
   background-color: #746beb;
   color: #f1f1ef;
   padding: 20px;
-  border: 2px solid black;
-  font-size: large;
+  border: 3px solid black;
+  font-size: x-large;
   font-weight: 400;
 }
 
