--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,7 +35,7 @@ button {
 
 .container {
   width: 60%;
-  height: 80%;
+  height: 85vh;
   justify-content: center;
   border: 3px solid #000000;
   margin: 20px 10px;
