--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,6 +79,7 @@ hr {
 }
 
 h3 {
+  width: 90%;
   text-align: center;
   font-size: 2.5vh;
   margin: 0;
@@ -245,10 +246,10 @@ footer {
 input,
 select {
   width: 70%;
-  padding: 12px 20px;
+  padding: 15px 20px;
   margin: 8px 0;
   box-sizing: border-box;
   border: 3px solid #000000;
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-family: Agrandir;
 }
