migrated tips to external component working on social media sharing now

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,7 +182,7 @@ h3 {
   background-color: transparent;
   padding: 50px 0px;
   border: none;
-  font-size: xx-large;
+  font-size: x-large;
   font-weight: 400;
   color: #3f3f3f;
 }
